--- a/inventory/inventory_manager.ipynb
+++ b/inventory/inventory_manager.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "id": "48cf5469",
    "metadata": {},
    "outputs": [],
@@ -31,19 +31,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "id": "7e6a2371",
    "metadata": {},
    "outputs": [],
    "source": [
     "#class for each inidivual food item\n",
     "class FoodItem:\n",
-    "    def __init__(self, name, expiry, nutrients, quantity): \n",
+    "    def __init__(self, name, expiry, calories, protein, vitamins, fats, quantity=1): \n",
     "        self.name = name \n",
     "        self.expiry =  datetime.strptime(expiry, \"%Y-%m-%d\")\n",
-    "        self.nutrients = nutrients\n",
+    "        self.calories = calories\n",
+    "        self.protein = protein\n",
+    "        self.vitamins = vitamins\n",
+    "        self.fats = fats\n",
     "        self.quantity = quantity\n",
-    "    \n",
+    "\n",
     "    def setID(self, id): \n",
     "        self._id = id\n",
     "\n",
@@ -55,14 +58,15 @@
     "            f\"Name: {self.name} \\n\"\n",
     "            f\"Expiry: {self.expiry.date()} \\n\"\n",
     "            f\"Quantity: {self.quantity} \\n\"\n",
-    "            f\"Nutrients: {self.nutrients}\")\n",
-    "    \n",
-    "    ##may add more nutritions like fats, carbohydrates etc. or a \"category\" variable for easier sort"
+    "            f\"Calories: {self.calories}\"\n",
+    "            f\"Protein: {self.protein}\"\n",
+    "            f\"Vitamins: {self.vitamins}\"\n",
+    "            f\"Fats: {self.fats}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "id": "6ceab8f3",
    "metadata": {},
    "outputs": [],
@@ -73,8 +77,8 @@
     "        self.items = {} #dictionary that stores all the food items (the actual inventory, in short)\n",
     "\n",
     "    #function for adding item to inventory\n",
-    "    def add_item(self, id, name, expiry, nutrients, quantity): \n",
-    "        newItem = FoodItem(name, expiry, nutrients, quantity)\n",
+    "    def add_item(self,id, name, expiry, calories, protein, vitamins, fats, quantity): \n",
+    "        newItem = FoodItem(name, expiry, calories, protein, vitamins, fats, quantity)\n",
     "        newItem.setID(id)\n",
     "        self.items[newItem.getID()] = newItem #the food item created gets added to the inventory dictionary with the ITEM ID as\n",
     "        # its key and the specified infos as its values \n",
@@ -83,49 +87,43 @@
     "    #function for searching item in the inventory\n",
     "    def search_item_by_id(self, targetItem):\n",
     "        targetItem = targetItem.upper()\n",
-    "        if self.items != None:\n",
-    "            for indiv_item in self.items.keys():\n",
-    "                if indiv_item.upper() == targetItem: \n",
-    "                    return self.items[targetItem]\n",
-    "            return f\"Food item with ID : ({targetItem}) is not found.\"\n",
+    "        if self.items[targetItem] in self.items:\n",
+    "            return self.items.get(targetItem)\n",
     "        else:\n",
-    "            return \"Inventory is empty 📦\"\n",
+    "            return f\"Item with ID {targetItem} not found in inventory.\"\n",
     "        \n",
-    "    def sort(): \n",
-    "        pass\n",
-    "\n",
-    "    def search_item_by_category():\n",
-    "        pass\n",
-    "    def search_item_by_nutrients():\n",
-    "        pass\n",
+    "    def search_item_by_vitamins(self, targetVitamin):\n",
+    "        targetVitamin = targetVitamin.upper()\n",
+    "        results = []\n",
+    "        for val in self.items.values():\n",
+    "            if targetVitamin in val.vitamins:\n",
+    "                results.append(val)\n",
+    "        if results:\n",
+    "            return results\n",
+    "        else:\n",
+    "            f\"No items found with vitamin {targetVitamin}.\"\n",
     "\n",
     "    \n",
     "    #function for displaying the inventory            \n",
     "    def display_inventory(self):\n",
-    "        \"\"\"if self.items == None: \n",
-    "            print(\"Inventory is empty.\")\n",
-    "        else: \n",
-    "            for item_id, item_details in self.items.items():\n",
-    "                print(f\"{item_id} : {item_details}\")\"\"\"\n",
-    "        \n",
     "        if not self.items:\n",
     "            print(\"Inventory is empty.📦\")\n",
     "            return\n",
     "\n",
     "        table_data = []\n",
     "        for item_id, item in self.items.items():\n",
-    "            vits = \", \".join(item.nutrients[\"vits\"])\n",
     "            table_data.append([\n",
     "                item_id,\n",
     "                item.name,\n",
     "                item.expiry.date(),\n",
     "                item.quantity,\n",
-    "                item.nutrients[\"calories\"],\n",
-    "                item.nutrients[\"protein\"],\n",
-    "                vits\n",
+    "                item.fats,\n",
+    "                item.calories,\n",
+    "                item.protein,\n",
+    "                item.vitamins\n",
     "            ])\n",
     "        \n",
-    "        headers = [\"ID\", \"Name\", \"Expiry\", \"Quantity\", \"Calories\", \"Protein\", \"Vitamins\"]\n",
+    "        headers = [\"ID\", \"Name\", \"Expiry\", \"Quantity\", \"Fats\", \"Calories\", \"Protein\", \"Vitamins\"]\n",
     "        print(tabulate(table_data, headers=headers, tablefmt=\"grid\"))        \n",
     "\n",
     "    #function for prompting food item details from user           \n",
@@ -136,18 +134,19 @@
     "        print(\"Enter nutritional info:\")\n",
     "        calories = int(input(\"  Calories: \"))\n",
     "        protein = int(input(\"  Protein (grams): \")) \n",
+    "        fats = int(input(\"  Fats: \")) \n",
     "        vitamins = input(\"Vitamins it is rich in(seperate it with comma)\")\n",
     "        vitamins_list = [v.strip().upper() for v in vitamins.split(\",\") if v.strip()] \n",
     "        nutrients = {\"calories\": calories, \"protein\": protein, \"vits\" : vitamins_list}\n",
     "        id =  input(\"Enter the food item ID to complete: \")\n",
-    "        return id, name, expiry, nutrients, quantity\n",
+    "        return id, name, expiry, calories, protein, vitamins, fats, quantity\n",
     "    \n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 12,
    "id": "ca266df3",
    "metadata": {},
    "outputs": [
@@ -155,23 +154,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-----------+--------------+------------+------------+------------+-----------+------------+\n",
-      "| ID        | Name         | Expiry     |   Quantity |   Calories |   Protein | Vitamins   |\n",
-      "+===========+==============+============+============+============+===========+============+\n",
-      "| VEG25001  | Brocolli     | 2028-05-10 |         50 |        100 |       300 | A, B12, D  |\n",
-      "+-----------+--------------+------------+------------+------------+-----------+------------+\n",
-      "| CARB25001 | Pasta        | 2028-06-09 |         60 |        100 |       300 | A, B12, D  |\n",
-      "+-----------+--------------+------------+------------+------------+-----------+------------+\n",
-      "| VEG25002  | Tomato       | 2025-06-09 |        100 |        100 |       300 | A, B12, D  |\n",
-      "+-----------+--------------+------------+------------+------------+-----------+------------+\n",
-      "| LENT25001 | Baguio beans | 2025-02-18 |         90 |        100 |       300 | A, B12, D  |\n",
-      "+-----------+--------------+------------+------------+------------+-----------+------------+\n",
-      "Food item with ID : (ITM202501) is not found.\n",
-      "ID: LENT25001 \n",
-      "Name: Baguio beans \n",
-      "Expiry: 2025-02-18 \n",
-      "Quantity: 90 \n",
-      "Nutrients: {'calories': 100, 'protein': 300, 'vits': ['A', 'B12', 'D']}\n"
+      "+----------+-------------+------------+------------+--------+------------+-----------+------------+\n",
+      "| ID       | Name        | Expiry     |   Quantity |   Fats |   Calories |   Protein | Vitamins   |\n",
+      "+==========+=============+============+============+========+============+===========+============+\n",
+      "| VEG25001 | Brocolli    | 2025-06-10 |         20 |     30 |        500 |       150 | C,D,B12    |\n",
+      "+----------+-------------+------------+------------+--------+------------+-----------+------------+\n",
+      "| CHK25002 | Chicken     | 2025-09-10 |         50 |     20 |        800 |       150 | K          |\n",
+      "+----------+-------------+------------+------------+--------+------------+-----------+------------+\n",
+      "| BRD25003 | White bread | 2028-09-11 |          9 |     10 |        500 |       150 | A          |\n",
+      "+----------+-------------+------------+------------+--------+------------+-----------+------------+\n"
      ]
     }
    ],
@@ -179,15 +170,12 @@
     "#adding a food item, displaying the inventory, searching through the inventory using ITEMID. hard coded (no input from user)\n",
     "#for testing purposes only! \n",
     "inventory = Inventory()\n",
-    "vitamins = ['A', 'B12', 'D']\n",
-    "nutrients = {\"calories\" : 100, \"protein\": 300, \"vits\": vitamins}\n",
-    "inventory.add_item(\"VEG25001\", \"Brocolli\", \"2028-05-10\", nutrients, 50)\n",
-    "inventory.add_item(\"CARB25001\", \"Pasta\", \"2028-06-09\", nutrients, 60)\n",
-    "inventory.add_item(\"VEG25002\", \"Tomato\", \"2025-06-09\", nutrients, 100)\n",
-    "inventory.add_item(\"LENT25001\", \"Baguio beans\", \"2025-02-18\", nutrients, 90)\n",
+    "inventory.add_item(\"VEG25001\", \"Brocolli\", \"2025-06-10\", 500, 150, \"C,D,B12\", 30, 20)\n",
+    "inventory.add_item(\"CHK25002\", \"Chicken\", \"2025-09-10\", 800, 150, \"K\", 20, 50)\n",
+    "inventory.add_item(\"BRD25003\", \"White bread\", \"2028-09-11\", 500, 150, \"A\", 10, 9)\n",
     "inventory.display_inventory()\n",
-    "print(inventory.search_item_by_id(\"ITM202501\"))\n",
-    "print(inventory.search_item_by_id(\"LENT25001\"))\n",
+    "inventory.search_item_by_vitamins(\"A, B\")\n",
+    "\n",
     "\n"
    ]
   },
