--- a/inventory/inventory_manager.ipynb
+++ b/inventory/inventory_manager.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 46,
    "id": "48cf5469",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 55,
    "id": "7e6a2371",
    "metadata": {},
    "outputs": [],
@@ -58,15 +58,15 @@
     "            f\"Name: {self.name} \\n\"\n",
     "            f\"Expiry: {self.expiry.date()} \\n\"\n",
     "            f\"Quantity: {self.quantity} \\n\"\n",
-    "            f\"Calories: {self.calories}\"\n",
-    "            f\"Protein: {self.protein}\"\n",
-    "            f\"Vitamins: {self.vitamins}\"\n",
+    "            f\"Calories: {self.calories} \\n\"\n",
+    "            f\"Protein: {self.protein} \\n\"\n",
+    "            f\"Vitamins: {self.vitamins} \\n\"\n",
     "            f\"Fats: {self.fats}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 67,
    "id": "6ceab8f3",
    "metadata": {},
    "outputs": [],
@@ -95,13 +95,14 @@
     "    def search_item_by_vitamins(self, targetVitamin):\n",
     "        targetVitamin = targetVitamin.upper()\n",
     "        results = []\n",
-    "        for val in self.items.values():\n",
-    "            if targetVitamin in val.vitamins:\n",
-    "                results.append(val)\n",
-    "        if results:\n",
-    "            return results\n",
-    "        else:\n",
-    "            f\"No items found with vitamin {targetVitamin}.\"\n",
+    "        if self.items != None:\n",
+    "            for val in self.items.values():\n",
+    "                if targetVitamin in val.vitamins:\n",
+    "                    results.append(val)\n",
+    "            if results: \n",
+    "                return results\n",
+    "            return f\"No item with {targetVitamin}\"\n",
+    "            \n",
     "\n",
     "    \n",
     "    #function for displaying the inventory            \n",
@@ -110,21 +111,7 @@
     "            print(\"Inventory is empty.📦\")\n",
     "            return\n",
     "\n",
-    "        table_data = []\n",
-    "        for item_id, item in self.items.items():\n",
-    "            table_data.append([\n",
-    "                item_id,\n",
-    "                item.name,\n",
-    "                item.expiry.date(),\n",
-    "                item.quantity,\n",
-    "                item.fats,\n",
-    "                item.calories,\n",
-    "                item.protein,\n",
-    "                item.vitamins\n",
-    "            ])\n",
-    "        \n",
-    "        headers = [\"ID\", \"Name\", \"Expiry\", \"Quantity\", \"Fats\", \"Calories\", \"Protein\", \"Vitamins\"]\n",
-    "        print(tabulate(table_data, headers=headers, tablefmt=\"grid\"))        \n",
+    "        self.display_table(self.items.values())        \n",
     "\n",
     "    #function for prompting food item details from user           \n",
     "    def get_details(self):\n",
@@ -135,18 +122,40 @@
     "        calories = int(input(\"  Calories: \"))\n",
     "        protein = int(input(\"  Protein (grams): \")) \n",
     "        fats = int(input(\"  Fats: \")) \n",
-    "        vitamins = input(\"Vitamins it is rich in(seperate it with comma)\")\n",
-    "        vitamins_list = [v.strip().upper() for v in vitamins.split(\",\") if v.strip()] \n",
-    "        nutrients = {\"calories\": calories, \"protein\": protein, \"vits\" : vitamins_list}\n",
+    "        vits = input(\"Vitamins it is rich in(seperate it with comma)\")\n",
+    "        vitamins = [v.strip().upper() for v in vits.split(\",\") if v.strip()] \n",
     "        id =  input(\"Enter the food item ID to complete: \")\n",
-    "        return id, name, expiry, calories, protein, vitamins, fats, quantity\n",
+    "        return id.upper(), name.upper(), expiry, calories, protein, vitamins, fats, quantity\n",
+    "    \n",
+    "\n",
+    "    def display_table(self, item_list):\n",
+    "        if not item_list:\n",
+    "            print(\"📦 No items to display.\")\n",
+    "            return\n",
+    "        \n",
+    "        table_data = []\n",
+    "        for item in item_list:\n",
+    "            table_data.append([\n",
+    "                item.getID(),\n",
+    "                item.name,\n",
+    "                item.expiry.date(),\n",
+    "                item.quantity,\n",
+    "                item.fats,\n",
+    "                item.calories,\n",
+    "                item.protein,\n",
+    "                item.vitamins\n",
+    "            ])\n",
+    "        \n",
+    "        headers = [\"ID\", \"Name\", \"Expiry\", \"Quantity\", \"Fats\", \"Calories\", \"Protein\", \"Vitamins\"]\n",
+    "        print(tabulate(table_data, headers=headers, tablefmt=\"grid\"))\n",
+    "\n",
     "    \n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 72,
    "id": "ca266df3",
    "metadata": {},
    "outputs": [
@@ -159,10 +168,18 @@
       "+==========+=============+============+============+========+============+===========+============+\n",
       "| VEG25001 | Brocolli    | 2025-06-10 |         20 |     30 |        500 |       150 | C,D,B12    |\n",
       "+----------+-------------+------------+------------+--------+------------+-----------+------------+\n",
-      "| CHK25002 | Chicken     | 2025-09-10 |         50 |     20 |        800 |       150 | K          |\n",
+      "| CHK25002 | Chicken     | 2025-09-10 |         50 |     20 |        800 |       150 | A, B       |\n",
       "+----------+-------------+------------+------------+--------+------------+-----------+------------+\n",
       "| BRD25003 | White bread | 2028-09-11 |          9 |     10 |        500 |       150 | A          |\n",
-      "+----------+-------------+------------+------------+--------+------------+-----------+------------+\n"
+      "+----------+-------------+------------+------------+--------+------------+-----------+------------+\n",
+      "+----------+-------------+------------+------------+--------+------------+-----------+------------+\n",
+      "| ID       | Name        | Expiry     |   Quantity |   Fats |   Calories |   Protein | Vitamins   |\n",
+      "+==========+=============+============+============+========+============+===========+============+\n",
+      "| CHK25002 | Chicken     | 2025-09-10 |         50 |     20 |        800 |       150 | A, B       |\n",
+      "+----------+-------------+------------+------------+--------+------------+-----------+------------+\n",
+      "| BRD25003 | White bread | 2028-09-11 |          9 |     10 |        500 |       150 | A          |\n",
+      "+----------+-------------+------------+------------+--------+------------+-----------+------------+\n",
+      "None\n"
      ]
     }
    ],
@@ -171,17 +188,18 @@
     "#for testing purposes only! \n",
     "inventory = Inventory()\n",
     "inventory.add_item(\"VEG25001\", \"Brocolli\", \"2025-06-10\", 500, 150, \"C,D,B12\", 30, 20)\n",
-    "inventory.add_item(\"CHK25002\", \"Chicken\", \"2025-09-10\", 800, 150, \"K\", 20, 50)\n",
+    "inventory.add_item(\"CHK25002\", \"Chicken\", \"2025-09-10\", 800, 150, \"A, B\", 20, 50)\n",
     "inventory.add_item(\"BRD25003\", \"White bread\", \"2028-09-11\", 500, 150, \"A\", 10, 9)\n",
     "inventory.display_inventory()\n",
-    "inventory.search_item_by_vitamins(\"A, B\")\n",
+    "results = inventory.search_item_by_vitamins(\"A\")\n",
+    "print(inventory.display_table(results))\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 50,
    "id": "756c78cf",
    "metadata": {},
    "outputs": [
@@ -199,7 +217,7 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[57]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[32m      5\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mChoose an action:\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m     inp = \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m1. Add an item \u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[33;43m 2.Search an item \u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[33;43m 3.Modify an item \u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[33;43m 4.View inventory \u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[33;43m 5. Exit\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      7\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m inp == \u001b[32m1\u001b[39m:\n\u001b[32m      8\u001b[39m         \u001b[38;5;28mid\u001b[39m, name, expiry, nutrients, quantity = inventory.get_details()\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[50]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[32m      5\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mChoose an action:\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m     inp = \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m1. Add an item \u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[33;43m 2.Search an item \u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[33;43m 3.Modify an item \u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[33;43m 4.View inventory \u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[33;43m 5. Exit\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      7\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m inp == \u001b[32m1\u001b[39m:\n\u001b[32m      8\u001b[39m         \u001b[38;5;28mid\u001b[39m, name, expiry, nutrients, quantity = inventory.get_details()\n",
       "\u001b[31mValueError\u001b[39m: invalid literal for int() with base 10: ''"
      ]
     }
