--- a/inventory/inventory_manager.ipynb
+++ b/inventory/inventory_manager.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 76,
    "id": "48cf5469",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 77,
    "id": "7e6a2371",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 87,
    "id": "6ceab8f3",
    "metadata": {},
    "outputs": [],
@@ -84,11 +84,10 @@
     "        # its key and the specified infos as its values \n",
     "        return f\"{newItem.getID()}({name} added successfully!)\"\n",
     "\n",
-    "    #function for searching item in the inventory\n",
+    "    #function for searching a specific item in the inventory using ID\n",
     "    def search_item_by_id(self, targetItem):\n",
-    "        targetItem = targetItem.upper()\n",
-    "        if self.items[targetItem] in self.items:\n",
-    "            return self.items.get(targetItem)\n",
+    "        if targetItem in self.items:\n",
+    "            return self.items.get(targetItem.upper())\n",
     "        else:\n",
     "            return f\"Item with ID {targetItem} not found in inventory.\"\n",
     "        \n",
@@ -155,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 86,
    "id": "ca266df3",
    "metadata": {},
    "outputs": [
@@ -172,14 +171,17 @@
       "+----------+-------------+------------+------------+--------+------------+-----------+------------+\n",
       "| BRD25003 | White bread | 2028-09-11 |          9 |     10 |        500 |       150 | A          |\n",
       "+----------+-------------+------------+------------+--------+------------+-----------+------------+\n",
-      "+----------+-------------+------------+------------+--------+------------+-----------+------------+\n",
-      "| ID       | Name        | Expiry     |   Quantity |   Fats |   Calories |   Protein | Vitamins   |\n",
-      "+==========+=============+============+============+========+============+===========+============+\n",
-      "| CHK25002 | Chicken     | 2025-09-10 |         50 |     20 |        800 |       150 | A, B       |\n",
-      "+----------+-------------+------------+------------+--------+------------+-----------+------------+\n",
-      "| BRD25003 | White bread | 2028-09-11 |          9 |     10 |        500 |       150 | A          |\n",
-      "+----------+-------------+------------+------------+--------+------------+-----------+------------+\n",
-      "None\n"
+      "RESULTS:\n",
+      "+----------+----------+------------+------------+--------+------------+-----------+------------+\n",
+      "| ID       | Name     | Expiry     |   Quantity |   Fats |   Calories |   Protein | Vitamins   |\n",
+      "+==========+==========+============+============+========+============+===========+============+\n",
+      "| VEG25001 | Brocolli | 2025-06-10 |         20 |     30 |        500 |       150 | C,D,B12    |\n",
+      "+----------+----------+------------+------------+--------+------------+-----------+------------+\n",
+      "+----------+----------+------------+------------+--------+------------+-----------+------------+\n",
+      "| ID       | Name     | Expiry     |   Quantity |   Fats |   Calories |   Protein | Vitamins   |\n",
+      "+==========+==========+============+============+========+============+===========+============+\n",
+      "| VEG25001 | Brocolli | 2025-06-10 |         20 |     30 |        500 |       150 | C,D,B12    |\n",
+      "+----------+----------+------------+------------+--------+------------+-----------+------------+\n"
      ]
     }
    ],
@@ -191,15 +193,19 @@
     "inventory.add_item(\"CHK25002\", \"Chicken\", \"2025-09-10\", 800, 150, \"A, B\", 20, 50)\n",
     "inventory.add_item(\"BRD25003\", \"White bread\", \"2028-09-11\", 500, 150, \"A\", 10, 9)\n",
     "inventory.display_inventory()\n",
-    "results = inventory.search_item_by_vitamins(\"A\")\n",
-    "print(inventory.display_table(results))\n",
-    "\n",
+    "##searching for items with vitamin B12\n",
+    "results = inventory.search_item_by_vitamins(\"B12\")\n",
+    "print(\"RESULTS:\")\n",
+    "inventory.display_table(results)\n",
+    "##searching for items with vitamin K\n",
+    "result = inventory.search_item_by_vitamins(\"D\")\n",
+    "inventory.display_table(results)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "756c78cf",
    "metadata": {},
    "outputs": [
@@ -217,14 +223,13 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[50]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[32m      5\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mChoose an action:\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m     inp = \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m1. Add an item \u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[33;43m 2.Search an item \u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[33;43m 3.Modify an item \u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[33;43m 4.View inventory \u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[33;43m 5. Exit\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      7\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m inp == \u001b[32m1\u001b[39m:\n\u001b[32m      8\u001b[39m         \u001b[38;5;28mid\u001b[39m, name, expiry, nutrients, quantity = inventory.get_details()\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[80]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[32m      5\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mChoose an action:\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m     inp = \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m1. Add an item \u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[33;43m 2.Search an item \u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[33;43m 3.Modify an item \u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[33;43m 4.View inventory \u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[33;43m 5. Exit\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      7\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m inp == \u001b[32m1\u001b[39m:\n\u001b[32m      8\u001b[39m         \u001b[38;5;28mid\u001b[39m, name, expiry, nutrients, quantity = inventory.get_details()\n",
       "\u001b[31mValueError\u001b[39m: invalid literal for int() with base 10: ''"
      ]
     }
    ],
    "source": [
-    "##adding to and displaying inventory (With user input)\n",
-    "\n",
+    "## INVENTORY MENU\n",
     "inventory = Inventory()\n",
     "while True:\n",
     "    print(\"Choose an action:\")\n",
